# image-render-blender-vehicle

./: NOTICE.md  README.md  setup.cfg
docs/source/: conf.py
src/anyvehicle/: __init__.py  av_global.py  av_ops_vehicle.py  av_props_vehicle_2w.py  av_props_vehicle_4w.py  av_ui_vehicle.py
src/anyvehicle/anim/: __init__.py  cls_planar_single_track_2w_model.py  cls_planar_single_track_4w_model.py  linear.py  path.py  util.py
