[metadata]
name = image-render-blender-vehicle
version = 3.1.2

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where = src
exclude = dev

[options.entry_points]
catharsys.blender.animate =
    /catharsys/blender/animate/vehicle/path/*:1.0 = anyvehicle.anim.path:CreateAnimHandler
    /catharsys/blender/animate/vehicle/linear/const/x:1.0 = anyvehicle.anim.linear:AnimConstVelX

anyvehicle.animate.factory =
    /catharsys/blender/animate/vehicle/path/2w/singletrack/planar:1.0 = anyvehicle.anim.path:CreatePlanarSingleTrack2wHandler
    /catharsys/blender/animate/vehicle/path/4w/singletrack/planar:1.0 = anyvehicle.anim.path:CreatePlanarSingleTrack4wHandler

